- https://github.com/eclipse-sirius/sirius-web/issues/2329[#2329] [form] Change the default representation in the details view for non containment reference from a select widget to a reference widget.
- https://github.com/eclipse-sirius/sirius-web/issues/2314[#2314] [diagram] Add feedback on edge selection on react-flow diagrams

== v2023.8.0

=== Shapes

- Add disable / enable concept for widgets
- Add new custom widget to edit single and multi-valued references
- Add support for Help Expressions in Form widgets
- Add border style for containers
- Add an API for filtering and ordering form pages

=== Architectural decision records

- [ADR-103] Improves the existing feedback messages capability
- [ADR-104] Add support for Help Expressions in Form widgets
- [ADR-105] Add custom widget to edit EMF references
- [ADR-106] Add the support for the palette with react flow

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/2080[#2080] [tree] EditingContextRepresentationDataFetcher will filter on IRepresentation instead of ISemanticRepresentation to be able to support TreeDescription.
+
As such targetObjectId is removed from RepresentationMetadata.
- https://github.com/eclipse-sirius/sirius-components/issues/2124[#2124] [sirius-web,emf] The `org.eclipse.sirius.web.services.documents.DocumentMetadataAdapter` has been renamed `ResourceMetadataAdapter` and moved to the `org.eclipse.sirius.components.emf` package (in `sirius-components-emf`).
This allows for code which does not depend on Sirius Web and the Document notion to properly display the top-level elements of a project in the UI.
- https://github.com/eclipse-sirius/sirius-components/issues/2126[#2126] [tree] The `IExplorerDescriptionProvider` interface has been removed.
The `TreeDescription` used by the _Explorer_ view is now registered using the general `IRepresentationDescriptionRegistryConfigurer` (see `ExplorerDescriptionProvider`).

=== Dependency update
