@@ -42,7 +42,11 @@ export const NodePalette = ({ diagramElementId, labelId }: NodePaletteProps) => 
 
   return (
     <NodeToolbar className={classes.toolbar} position={Position.Top}>
-      <Palette diagramElementId={diagramElementId} onDirectEditClick={handleDirectEditClick} isNodePalette={true} />
+      <Palette
+        diagramElementId={diagramElementId}
+        onDirectEditClick={handleDirectEditClick}
+        isDiagramElementPalette={true}
+      />
     </NodeToolbar>
   );
 };
